# fortune-frenzy-internal

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  deploy.sh  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
item-range-svc/: Cargo.toml
item-range-svc/src/: main.rs
src/: server.ts
src/endpoints/casebattles/: create.ts  get_battles.ts  get_cases.ts  join.ts  start.ts
src/endpoints/cases/: get_cases.ts  open_case.ts  regenerate_cases.ts
src/endpoints/coinflip/: cancel.ts  create.ts  get_coinflips.ts  join.ts  start.ts
src/endpoints/discord/: transcript.ts  user_info.ts
src/endpoints/index/: packet.ts  register_server.ts  roblox_network_log.ts  root.ts  server_info.ts  settings.ts  time.ts
src/endpoints/items/: cancel_item_transfer.ts  confirm_item_transfer.ts  find_items_in_range.ts  get_total_value.ts  item_transfer.ts  spawn_items.ts
src/middleware/: authorization.ts  metrics.ts
src/routes/: casebattles.ts  cases.ts  coinflip.ts  discord.ts  index.ts  items.ts  marketplace.ts  statistics.ts  trading.ts  users.ts
src/service/: casebattles-redis.ts  casebattles-scheduler.ts  cases-regeneration-scheduler.ts  clickhouse.ts  coinflip-redis.ts  jackpot-redis.ts  mariadb.ts  postgres.ts  redis.ts
src/types/: Endpoints.d.ts
src/utilities/: countries.json  discordLog.ts  doSelfHttpRequest.ts  generateFreshUaid.ts  getItemString.ts  getRandomWeightedEntry.ts  getTotalValue.ts  getUaidInfo.ts  getUserInfo.ts  internalRequest.ts  packeter.ts  routeHandler.ts  secureFlip.ts  secureRandomness.ts  smartQuery.ts
(+36 files in other folders)
